# LLM

./: .gitignore  README.md  package-lock.json
backend/: package-lock.json  package.json
backend/src/: server.ts  teste.ts
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx
frontend/src/store/: chatStore.ts
llm_robot/: main.py  package.xml  setup.py
llm_robot/controller/: robot_controller.py
llm_robot/model/: llm_model.py  speech_model.py
llm_robot/ros_interface/: ros2_navigation.py  sim_serial_robot.py
llm_robot/view/: user_view.py
mini_nara_ws/src/mini_nara_description/: CMakeLists.txt  package.xml
mini_nara_ws/src/mini_nara_description/launch/: rsp.launch.py  sim.launch.py
mini_nara_ws/src/mini_nara_description/urdf/: camera.xacro  jetson_nano.xacro  lidar.xacro  mini_nara.urdf.xacro
mini_nara_ws/src/mini_nara_description/worlds/: sala_vazia.sdf
